# Labit

./: .gitignore  README.md  THIRD_PARTY.md  pyproject.toml  requirements.txt  setup_vps.sh
.claude/commands/: bugfix.md  commit.md  debrief.md  investigate.md  launch-exp.md  new-hypothesis.md  new-project.md  project.md  pull-paper.md  review-results.md  search-papers.md  sync.md  weekly-report.md
configs/projects/: GLANCE.yaml  SemBelief-WM.yaml
docs/design/: labit-agent-runtime-v1.md  labit-cli-v1.md  labit-context-memory-v1.md  labit-experiment-module-v1.md  labit-paper-module-v1.md
labit/: __init__.py  __main__.py  cli.py  models.py  paths.py  rendering.py
labit/agents/: __init__.py  context.py  models.py  orchestrator.py  providers.py  store.py
labit/automation/: __init__.py  engine.py  models.py  observer.py  store.py
labit/capture/: __init__.py  commands.py  drafter.py  models.py  service.py
labit/chat/: clipboard.py  commands.py  composer.py  context.py  latex_unicode.py  models.py  service.py  store.py  synthesizer.py
labit/codebase/: __init__.py  map.py
labit/commands/: auto.py  chat.py  compute.py  context.py  daily_summary.py  dispatch.py  experiment.py  focus.py  hypothesis.py  memory.py  palace.py  paper.py  project.py  rendering.py  storage.py  sync.py  weekly_summary.py
labit/context/: __init__.py  assembler.py  budget.py  condenser.py  events.py  maps.py  store.py
labit/devloop/: __init__.py  commands.py  engine.py  git_ops.py  (+1 more)
scripts/: daily_digest.py  hypothesis_tracker.py  project_config.py  spark_ideas.py  webhook_listener.py
(+60 files in other folders)
