[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labit"
version = "0.1.0"
description = "Local-first CLI control plane for AI-assisted research workflows."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12,<3",
  "PyYAML>=6.0,<7",
  "rich>=13.0,<14",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
labit = "labit.cli:app"

[tool.setuptools.packages.find]
include = ["labit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:capture"
