[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labit"
version = "0.1.0"
description = "Local-first CLI control plane for AI-assisted research workflows."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12,<3",
  "PyYAML>=6.0,<7",
  "prompt_toolkit>=3.0,<4",
  "rich>=13.0,<14",
  "typer>=0.12,<1",
  "mdit-py-plugins>=0.4,<1",
  "unicodeit>=0.7,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]
mempalace = [
  "chromadb>=0.5.0,<0.7",
]

[project.scripts]
labit = "labit.cli:app"

[tool.setuptools.packages.find]
include = ["labit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:capture"
